<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightgreys"
    android:paddingTop="8dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@color/snow"
        android:orientation="horizontal" >

        <cn.heart.view.CircleImageView
            android:id="@+id/civ_head_ir"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_head"
            app:border_color="@color/flowerblue"
            app:border_width="2dp" />

        <TextView
            android:id="@+id/tv_nick_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/civ_head_ir"
            android:text="@string/nick"
            android:textColor="@color/dimgrey"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="55dp"
            android:text="@string/text_grade"
            android:textColor="@color/dimgrey"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_grade_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/grade"
            android:textColor="@color/flowerblue"
            android:textSize="25sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/mediumgreys" >
    </View>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginTop="80dp"
        android:background="@color/snow"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_time_ir"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_whole_time"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_rr_ir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_RR_rate"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_average_ir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/rate_average"
                        android:textColor="@color/flowerblue"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_rao_ir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_rhythm_symptoms"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_syps_rhythm_ir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/symptoms_rhythm_health"
                        android:textColor="@color/flowerblue"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_heart_symptoms"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_syps_heart_ir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/loadnice"
                        android:textColor="@color/flowerblue"
                        android:textSize="18sp" />
                </RelativeLayout>
            </RelativeLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/iv_details_ir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_result_detail"
                    android:contentDescription="@string/text_rhythm"
                    android:scaleType="fitStart" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>